--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ nav {
 }
 
 .navbar-menu {
-  padding-right: 0px;
+  padding-right: 0;
 }
 
 .header-box {
@@ -289,7 +289,7 @@ nav {
   margin-top: 186px;
   margin-left: auto;
   margin-right: auto;
-  }
+}
 
 .see-proj:hover {
   transition: all 0.2s ease-in-out;
