--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ nav {
   font-style: normal;
   font-weight: 400;
   font-size: 40px;
-  line-height: 44px;
+  line-height: 52px;
   display: grid;
   justify-content: start;
   margin-top: 50px;
@@ -154,11 +154,11 @@ nav {
 .recent-detail {
   display: grid;
   justify-content: center;
-  font-family: "Inter", serif;
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
-  font-size: 18px;
-  line-height: 24px;
+  font-size: 20px;
+  line-height: 28px;
   color: #091e42;
   margin-right: 30px;
 }
@@ -226,10 +226,10 @@ nav {
   display: grid;
   font-family: "Crete Round", serif;
   font-style: normal;
-  width: 300px;
-  height: 30px;
+  width: 337px;
+  height: 81px;
   font-weight: 400;
-  font-size: 38px;
+  font-size: 32px;
   line-height: 44px;
   color: #fff;
   margin-left: 40px;
@@ -239,14 +239,14 @@ nav {
 .daily-selection {
   display: grid;
   justify-content: center;
-  width: 300px;
-  height: 60px;
+  width: 337px;
+  height: 72px;
   padding-top: 40px;
   margin-left: 40px;
   font-family: "Inter", serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 17px;
   line-height: 24px;
   color: #fff;
 }
@@ -276,17 +276,18 @@ nav {
 }
 
 .see-proj {
-  width: 93%;
-  height: 48px;
+  width: 100px;
+  height: 24px;
   background: #ff6b00;
   font-family: "Inter", serif;
   font-style: normal;
   font-weight: 700;
   font-size: 17px;
-  line-height: 35px;
+  line-height: 24px;
   letter-spacing: 0.03em;
   color: #fff;
   border: none;
+  align-items: center;
   align-self: center;
   margin-top: 186px;
   margin-left: auto;
@@ -294,6 +295,8 @@ nav {
 }
 
 .see-proj:hover {
+  width: 369px;
+  height: 58px;
   transition: all 0.2s ease-in-out;
   background: #fff5e1;
   border: 1px solid #f55800;
@@ -317,9 +320,9 @@ nav {
 
 .about-head {
   margin-left: 40px;
-  height: 79px;
+  height: 78px;
   font-size: 72px;
-  line-height: 88px;
+  line-height: 82px;
   letter-spacing: 0.33px;
   color: #ff6b00;
 }
@@ -328,7 +331,7 @@ nav {
   padding: 12px;
   margin-left: 40px;
   font-family: "Inter", sans-serif;
-  font-weight: bold;
+  font-weight: 700;
   font-size: 17px;
   line-height: 24px;
   background: #f55800;
@@ -348,8 +351,8 @@ nav {
   font-style: normal;
   margin-left: 40px;
   font-weight: 400;
-  font-size: 18px;
-  line-height: 24px;
+  font-size: 20px;
+  line-height: 32px;
   color: #f4f5f7;
 }
 
@@ -379,15 +382,15 @@ nav {
   line-height: 43px;
   list-style: none;
   text-align: center;
-  height: 48px;
+  height: 24px;
   font-family: "Inter", serif;
   font-style: normal;
   font-weight: 400;
   color: #fff;
 }
 
-.tech-title > h5 {
-  font-family: "InaiMathi", serif;
+.tech-white {
+  font-family: "inter", serif;
   font-style: normal;
   font-weight: 700;
   font-size: 32px;
