--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ nav {
 .recent-detail {
   display: grid;
   justify-content: center;
-  font-family: 'Inter';
+  font-family: "Inter", serif;
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
