--- a/css/style.css
+++ b/css/style.css
@@ -400,3 +400,86 @@ nav {
   line-height: 44px;
   color: #fff;
 }
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 900px;
+  background-color: #fff;
+}
+
+.form-detail {
+  font-family: "Inter", serif;
+  font-style: normal;
+  text-align: center;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 44px;
+  margin-left: 25px;
+  margin-right: 25px;
+  margin-top: 50px;
+  padding-top: 90px;
+  color: #172b4d;
+}
+
+input[type="text"],
+input[type="email"] {
+  font-family: "Inter", serif;
+  margin-top: 20px;
+  width: 295px;
+  border: #979493;
+  box-sizing: border-box;
+  text-align: start;
+}
+
+textarea {
+   font-family: "inter", serif;
+  margin-top: 20px;
+  margin-left: 15px;
+  width: 327px;
+  height: 114px;
+  background: #FBF8F7;
+  box-sizing: border-box;
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 24px; 
+}
+
+.button {
+  font-family: "Inter", sans-serif;
+  font-weight: bold;
+  font-size: 17px;
+  line-height: 24px;
+  background: #f55800;
+  color: #fff;
+  border: 1px solid #f56b00;
+  padding: 15px 20px;
+}
+
+.button:hover {
+  transition: all 0.2s ease-in-out;
+  background: #fff5e1;
+  border: 1px solid #f55800;
+  color: #f55800;
+  cursor: pointer;
+}
+
+.social-footer-social {
+  margin-top: 100px;
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+}
+
+.social-link {
+  display: flex;
+}
+
+.social-icon {
+  padding: 15px;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+}
