update HTML and CSS

--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,26 @@ nav {
   text-decoration: none;
 }
 
+.navbar-btn ul li {
+  font-size: 15px;
+  list-style: none;
+  display: inline-block;
+  padding: 8px 12px;
+  position: relative;
+  color: #fff;
+  text-decoration: none;
+}
+
+.navbar-link a:hover {
+  opacity: 0.8;
+  transition: all 0.3s ease-in-out;
+}
+
+.navbar-desk {
+  display: none;
+  padding-right: 200px;
+}
+
 .navbar-menu {
   padding-right: 0;
 }
@@ -424,7 +444,7 @@ textarea {
   font-family: "inter", serif;
   margin-top: 20px;
   margin-left: 15px;
-  width: 327px;
+  width: 100%;
   height: 114px;
   background: #fbf8f7;
   border: #d4cfc9;
@@ -511,16 +531,16 @@ form.contact-us > input {
 
 @media screen and (min-width: 768px) {
   .container {
-    padding: 0 85px;
+    padding-left: 55px;
     width: 140%;
     box-sizing: border-box;
   }
 
-  .navbar-menu {
+  .navbar-desk {
     display: flex;
   }
 
-  .navbar-menu-button {
+  .navbar-menu {
     display: none;
   }
 
@@ -779,15 +799,27 @@ form.contact-us > input {
     flex: 1.5;
   }
 
+  form.contact-us > input {
+    width: 100%;
+  }
+
+  form.contact-us > textarea {
+    margin-left: 0;
+  }
+
   .form-detail {
     position: relative;
     margin: 0;
     text-align: left;
+    width: 40%;
   }
 
   .footer-line-section {
     display: none;
   }
+.foot-separater {
+  width: 140%;
+}
 
   .social-media-icon1 {
     display: flex;
