--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,7 @@ nav {
 
 .mobile-menu{
   background-color: #3C3A39;
+  display:none;
 }
 .mobile-menu-image{
   display:flex;
@@ -95,6 +96,10 @@ nav {
   margin-right:24px ;
   padding-left: 24px;
   padding-right:24px ;
+}
+
+.mobile-menu.active{
+  display:block;
 }
 .about-us {
   background-size: 256px;
