update HTML and .js files

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,11 @@ ul {
   box-sizing: border-box;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 .container {
   padding-left: 0;
   padding-right: 0;
@@ -64,43 +69,35 @@ nav {
 
 .navbar-menu {
   padding-right: 0;
+  z-index: 1;
 }
 
-.mobile-menu{
-  background-color: #3C3A39;
+.mobile-nav-list {
   display: none;
-}
-.mobile-menu-image{
-  display:flex;
-  justify-content: flex-end;
-}
-.mobile-menu-image img{
-  width: 40px;
-  height: 40px;
-  margin-right: 38px;
-}
-
-.mobile-menu-list{
-  display:flex;
-  flex-direction: column;
- 
-}
-
-.mobile-menu-list li{
-  list-style: none;
+  box-sizing: border-box;
+  padding: 50px 24px;
   font-size: 32px;
-  color: #FFF5E1;
   font-weight: 700;
-  border-bottom: solid #6F6C6B 1px ;
-  margin-left: 24px;
-  margin-right:24px ;
-  padding-left: 24px;
-  padding-right:24px ;
 }
 
-.mobile-menu.active{
-  display:block;
+.toggle-navbar {
+  display: block;
+  position: absolute;
+  background-color: #3c3a39;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
 }
+
+.mobile-nav-list li {
+  text-align: left;
+  margin-top: 20px;
+  border-bottom: 2px solid #6f6c6b;
+  max-width: 100%;
+  padding: 15px;
+}
+
 .about-us {
   background-size: 256px;
   height: 600px;
