update linter errors

--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,11 @@ ul {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  list-style-type: none ;
+  list-style-type: none;
 }
 
 a {
-  color: #FFF5E1;
+  color: #fff5e1;
   text-decoration: none;
 }
 
